# indexer-rs

./: .coderabbit.yaml  .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  compose.env.example  compose.testnet.env.example  deny.toml  docker-compose.testnet.yml  docker-compose.yml
.github/: CODEOWNERS
.github/workflows/: cargo-audit.yml  ci.yml  commitlint.yml  dependency-review.yml  gitleaks.yml  release.yml  smoke.yml
crates/analytics/: Cargo.toml
crates/analytics/src/: flusher.rs  lib.rs  row.rs
crates/api/: Cargo.toml  openapi.json
crates/api/src/: auth.rs  cached.rs  error.rs  graphql.rs  lib.rs  observability.rs  serialise.rs
crates/api/src/routes/: address.rs  blocks.rs  coinblast.rs  contracts.rs  etherscan.rs  health.rs  leaderboards.rs  metrics.rs  mod.rs  openapi.rs  readyz.rs  stats.rs  tx.rs
crates/cache/: Cargo.toml
crates/cache/src/: breaker.rs  client.rs  lib.rs
crates/chain/: Cargo.toml  build.rs
crates/chain/src/: error.rs  grpc.rs  lib.rs  provider.rs  rest.rs  retry.rs
crates/coinblast/: Cargo.toml
crates/coinblast/src/: events.rs  handlers.rs  lib.rs  orphan.rs  worker.rs
crates/db/: Cargo.toml
crates/db/migrations/: 0001_initial.sql  0002_stats_daily_mv.sql  0003_token_transfers_unique.sql  0004_contracts.sql  0005_addresses.sql
crates/db/src/: addresses.rs  blocks.rs  cb_queries.rs  cb_tokens.rs  cb_trades.rs  contracts.rs  lib.rs  logs.rs  meta.rs  stats.rs  token_transfers.rs  transactions.rs
crates/domain/: Cargo.toml
crates/domain/src/: block.rs  ids.rs  lib.rs  log.rs  token_transfer.rs  transaction.rs  wei.rs
crates/handlers/: Cargo.toml
crates/handlers/src/: lib.rs
crates/sync/: Cargo.toml
crates/sync/src/: backfill.rs  block_writer.rs  contract_detect.rs  convert.rs  cursor.rs  lib.rs  reorg.rs  single_flight.rs  tail.rs  token_decode.rs
scripts/: smoke-fixtures.sql  smoke.sh
