[package]
name = "indexer-analytics"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
indexer-domain = { path = "../domain", version = "0.2.1" }

clickhouse.workspace = true
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["sync", "time", "rt", "macros"] }
tokio-util = { workspace = true, features = ["rt"] }
parking_lot.workspace = true
tracing.workspace = true
thiserror.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "test-util"] }
