[package]
name = "indexer-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
indexer-domain = { path = "../domain", version = "0.2.4" }
indexer-db = { path = "../db", version = "0.2.4" }
indexer-cache = { path = "../cache", version = "0.2.4" }

# Prometheus metrics export.
metrics.workspace = true
metrics-exporter-prometheus.workspace = true

# Per-IP rate-limit (governor token bucket via tower-governor).
tower_governor = "0.8"

# HTTP server.
axum.workspace = true
tower = { workspace = true }
tower-http = { workspace = true, features = ["cors", "trace", "timeout"] }

# GraphQL.
async-graphql.workspace = true
async-graphql-axum.workspace = true

# Serde — response shapes.
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

# Async + sqlx.
tokio = { workspace = true, features = ["rt", "macros"] }
sqlx.workspace = true

# Logging + errors.
tracing.workspace = true
thiserror.workspace = true

# Constant-time compare for the bearer-token auth middleware.
subtle = "2"

# Hex render for request_id middleware.
hex.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
