[package]
name = "indexer-chain"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
indexer-domain = { path = "../domain", version = "0.2.4" }

# alloy: EVM JSON-RPC client.
alloy-primitives.workspace = true
alloy-provider.workspace = true
alloy-rpc-types.workspace = true
alloy-transport-http.workspace = true

# tonic: gRPC transport (generated types live in sentrix-proto).
tonic.workspace = true

# Single source of truth for the sentrix.v1 schema. Replaces the local
# proto/ + build.rs codegen we used to ship inside this crate; bumps to
# the schema now flow through `cargo update -p sentrix-proto`.
sentrix-proto = "0.1.1"

# REST client for native `/tx/<hash>` fetch.
reqwest = { workspace = true }

# Serde for native REST shapes.
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

# Async runtime + utilities.
tokio.workspace = true
futures.workspace = true

# Logging + errors.
tracing.workspace = true
thiserror.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "test-util"] }
