[package]
name = "indexer-db"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
indexer-domain = { path = "../domain", version = "0.2.7" }
sqlx = { workspace = true }
tokio.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
