[package]
name = "indexer-domain"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
alloy-primitives.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sqlx = { workspace = true }
thiserror.workspace = true
hex.workspace = true

[dev-dependencies]
serde_json.workspace = true
